imagens, links, ancoras e listas

--- a/index.html
+++ b/index.html
@@ -1,32 +1,47 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE html> <!-- Indica ao navegador p/ usar a versão recente -->
+<html>
+<!-- Pai/Raiz de todas as tags -->
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SoulCode Academy</title>
-    <meta name="description" content="uma pagina para estudar html!">
-    <meta nome="outor" content="keiwords" content="html,estudar">
+    <!-- Manter informações da página -->
+    <meta charset="utf-8" /> <!-- Uso de caracteres especiais -->
+    <title>Página Inicial</title>
+    <!-- Meta tags -->
+    <meta name="description" content="Uma página para estudar HTML!" />
+    <meta name="author" content="jose-almir" />
+    <meta name="keywords" content="html,estudo" />
 </head>
 
 <body>
+    <!-- Contém a parte visível da página -->
     <p>Olá, tudo bem?</p>
     <p>Sim, estou ótimo!</p>
-    <p>Olá, estamos iniciando <br> um novo bootcamp <br /> de java fullStack
-        <br><br><br>
+    <p>Olá, estamos iniciando <br /> um novo bootcamp <br /> de Java Fullstack
+        <br /><br /><br />
     </p>
-    <p>
-        <!--titulo e dica do elemento-->
-    <p title="Boas vindas">Bem-Vindo(a) ao nosso site!</p>
+    <!-- title é uma dica do elemento -->
+    <p title="Boas vindas">Bem-vindo(a) ao nosso site!</p>
     <button title="Clique aqui para continuar">Clique</button>
-    <P hidden>Ué sumiu?</P>
-    <!--hidden oculta-->
+    <p hidden>Ué sumiu?</p> <!-- hidden oculta -->
     <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae obcaecati odit amet natus
-        corporis omnis. Quisquam libero culpa soluta debitis corrupti at amet modi recusandae.
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt quibusdam reprehenderit tempore, eos aliquid
+        mollitia omnis cupiditate. Veritatis ratione, esse mollitia iste veniam eum omnis.
     </p>
-    </p>
+    <h1>Introdução ao HTML</h1> <!-- Maior relevância -->
+    <p>Bem vindo(a) a introdução ao HTML básico!</p>
+    <h2>Meta tags</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo, voluptas.</p>
+    <h3>meta charset</h3>
+    <h4>H4</h4>
+    <h5>H5</h5>
+    <h6>H6</h6>
+    <img src="./img/almir.jpg" alt="vidio calma" width="900" heitht="500" alt="primavera">
+    <img src="https://cdn.pixabay.com/photo/2022/07/25/15/18/cat-7344042_960_720.jpg" alt="um gatinho">
+    <br>
+    <!-- href = referencia da imagem -->
+    <a href="./ajuda.html" target="_blank">Ir para ajuda</a>
+    <br>
+    <!-- target = _blank abre nova aba -->
+    <a href="https://github.com/jose-almir/jose-almir" target="_blank">Ir para o gitHub</a>
 </body>
-
-</html>
+<!-- </html> -->
