imagens, lisks, ancoras

--- a/ajuda.html
+++ b/ajuda.html
@@ -51,7 +51,8 @@
             doloremque sed officia quia nesciunt accusamus odit. Ad harum veritatis illum eveniet expedita iure, sequi
             voluptate ipsa sit in eos labore laudantium repellat corrupti ullam deleniti molestiae corporis minima
             tempore at dolore. Iste inventore ducimus eaque beatae ipsum id atque vel! Omnis nisi, pariatur soluta quas,
-            ut ipsum provident qui possimus dicta necessitatibus doloremque quisquam est, culpa autem?
+            ut ipsum provident qui possimus dicta necessitatibus doloremque quisquam est, culpa autem?Lorem ipsum dolor
+            sit, amet consectetur adipisicing elit. Iusto, dolorum?
         </p>
 
     </div>
