--- a/cidade.html
+++ b/cidade.html
@@ -9,9 +9,13 @@
 </head>
 
 <body>
-    <h1>
-        <header>Cidade Tabão da Serra, S.P Conheça algum ponto turistico</header>
-    </h1>
+    <header>
+        <h1>
+            <header>Cidade Tabão da Serra, S.P Conheça algum ponto turistico</header>
+        </h1>
+
+    </header>
+
     <img src="https://dynamic-media-cdn.tripadvisor.com/media/photo-o/0e/b9/21/99/praca.jpg?w=1200&h=-1&s=1" alt="">
     <br>
     <a href="https://www.tripadvisor.pt/Attractions-g1731605-Activities-Taboao_da_Serra_State_of_Sao_Paulo.html"
