--- a/wiki.html
+++ b/wiki.html
@@ -64,7 +64,7 @@
                         <td>21/08/1984</td>
                     </tr>
                     <tr><!--rawspan = duracao medida -->
-                        <td rawspan="2">Cliente</td>
+          +/.7021              <td rawspan="2">Cliente</td>
                         <td>Aaron L. Baron</td> <!--tabe Data-->
                         <td>000.000.000.00</td>
                         <td>12/01/2014</td>
