execicio: form, tabela

--- a/time.html
+++ b/time.html
@@ -31,6 +31,7 @@
 
                         <th colspan="1">#</th>
                         <th colspan="1">TIME</th>
+                        <th colspan="1"></th>
 
                         <th>P: PONTOS</th>
                         <th>J: JOGOS</th>
